# Encrypter-decrypter

./: .gitignore  README.md  commands.txt  pyproject.toml  requirements.txt
app/: admin.py  functions.py  mal_file.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_user_profile_email.py  0003_alter_user_profile_id.py
authentication/: forms.py  models.py  views.py
core/: settings.py  urls.py
core/static/assets/css/: iDashboard.css
core/templates/: New Project #2.wpr  access-denied.html  documentation.html  documentation_.html  enc.html  error-403.html  error-404.html  error-500.html  home.html  index.html  onboarding.html
core/templates/accounts/: login.html  register.html
core/templates/includes/: footer.html  navigation.html
core/templates/layouts/: base-fullscreen.html  base.html
staticfiles/assets/css/: iDashboard.css
steganography/: steg.py  urls.py  views.py
steganography/templates/steganography/: decode.html  encode.html  info.html
usersdata/folder_elliot/dec_key/: elliotprivatekey.pem
usersdata/folder_elliot/enc_key/: elliotpublickey.pem
usersdata/folder_jegan/dec_key/: dec_enc_-squid.docx  dec_enc_free.txt  dec_enc_x_auto.txt  jeganprivatekey.pem
usersdata/folder_jegan/enc_key/: enc_enc_x_auto.txt  enc_ldap-squid.docx  jeganpublickey.pem
usersdata/folder_jegan/uploads/: Phishing Websites Features.docx
usersdata/folder_john/dec_key/: johnprivatekey.pem
usersdata/folder_john/enc_key/: enc_free.txt  free.txt  johnpublickey.pem
usersdata/folder_parthiban/dec_key/: dec_enc_x_auto.txt  parthibanprivatekey.pem
(+7 files in other folders)
