[tool.poetry]
name = "encrypter-decrypter"
version = "0.1.0"
description = ""
authors = ["prathameshkhade <pkhade2865@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
pycodestyle = "^2.13.0"
pytz = "^2025.2"
unipath = "^1.1"
dj-database-url = "^2.3.0"
python-decouple = "^3.8"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
opencv-python = "^4.11.0.86"
numpy = "^2.2.5"
pycryptodome = "^3.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
